<resources>
    <string name="app_name">TuristaDroid</string>
    <string name="tituloSplashScreen">TuristaDroid</string>

    <string name="login_lbl_Correo">E-mail</string>
    <string name="login_lbl_Contrasena">Contraseña</string>
    <string name="login_btn_iniciarSesion">Iniciar sesión</string>
    <string name="login_link_registrarse">Registrarse</string>

    <string name="register_lbl_nombreUsu"> Nombre de usuario</string>

    <string name="mp_hint_nombreusu">Nombre usuario</string>
    <string name="mp_hint_contrasena">Contraseña</string>
    <string name="mp_hint_twitter">Link Twitter</string>


    <string name="title_activity_pantallaprincipal">pantallaprincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Salir">¿Quieres salir?</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cercaDeMi">Cerca de mi</string>
    <string name="mis_sitios">Mis sitios</string>
    <string name="mi_perfil">Mi perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreApellidos">Nombre y Apellidos</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="EncenderLinterna">Encender linterna</string>

    <string-array name="filtros">
        <item>Ordenar por:</item>
        <item>Nombre asc</item>
        <item>Nombre desc</item>
        <item>Fecha asc</item>
        <item>Fecha desc</item>
        <item>Valoracion asc</item>
        <item>Valoracion desc</item>
    </string-array>

    <string name="ok">Aceptar</string>
    <string name="no">Cancelar</string>

</resources>