<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.miperfil">

    <Button
        android:id="@+id/btnEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="286dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorBTN_Dark"
        android:text="@string/editar_perfil"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miperfil_et_twitter"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imgMiPerfil"
        android:layout_width="107dp"
        android:layout_height="104dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/miperfil_tv_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="56dp"
        android:text="Correo Electronico"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toEndOf="@+id/imgMiPerfil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/miperfil_tv_nombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="81dp"
        android:text="Nombre usuario"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgMiPerfil"
        app:layout_constraintTop_toBottomOf="@+id/miperfil_tv_correo" />

    <EditText
        android:id="@+id/miperfil_et_contrasena"
        android:layout_width="237dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/mp_hint_contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miperfil_et_nombreusuario" />

    <EditText
        android:id="@+id/miperfil_et_twitter"
        android:layout_width="237dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/mp_hint_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miperfil_et_contrasena" />

    <EditText
        android:id="@+id/miperfil_et_nombreusuario"
        android:layout_width="239dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/mp_hint_nombreusu"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMiPerfil" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMP_Twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorBTN_Dark"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMP_Camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorBTN_Dark"
        android:clickable="true"
        android:src="@drawable/ic_camara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMP_Galeria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="@color/colorBTN_Dark"
        android:clickable="true"
        android:src="@drawable/ic_galeria"
        app:layout_constraintBottom_toTopOf="@+id/fabMP_Camara"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>