<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@color/colorPrimary"
    tools:context=".actividades.Registrarse">
=======
    tools:context=".actividades.registrarse">
>>>>>>> main

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
<<<<<<< HEAD
        android:backgroundTint="@color/colorBTN_Dark"
=======
        android:backgroundTint="@android:color/holo_blue_dark"
>>>>>>> main
        android:text="@string/login_link_registrarse"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarse_et_nombreusu" />

    <EditText
        android:id="@+id/registrarse_et_correo"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="#B3B3B3"
<<<<<<< HEAD
        android:backgroundTint="@color/design_default_color_background"
=======
        android:backgroundTint="#B3B3B3"
>>>>>>> main
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resgistrarse_tv_correo" />

    <EditText
        android:id="@+id/registrarse_et_nombreusu"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="#B3B3B3"
<<<<<<< HEAD
        android:backgroundTint="@color/design_default_color_on_primary"
=======
        android:backgroundTint="#B3B3B3"
>>>>>>> main
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarse_tv_nombreuser" />

    <TextView
        android:id="@+id/registrarse_tv_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
<<<<<<< HEAD
        android:layout_marginTop="5dp"
        android:layout_marginEnd="168dp"
        android:text="@string/login_lbl_Contrasena"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_background"
        android:textStyle="bold"
=======
        android:layout_marginEnd="168dp"
        android:text="@string/login_lbl_Contrasena"
        android:textAlignment="center"
>>>>>>> main
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarse_et_correo" />

    <EditText
        android:id="@+id/registrarse_et_contrasena"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
<<<<<<< HEAD
        android:background="@color/design_default_color_background"
        android:backgroundTint="@color/design_default_color_on_primary"
=======
        android:background="#B3B3B3"
        android:backgroundTint="#B3B3B3"
>>>>>>> main
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarse_tv_contrasena"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resgistrarse_tv_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="168dp"
        android:text="@string/login_lbl_Correo"
        android:textAlignment="center"
<<<<<<< HEAD
        android:textColor="@color/design_default_color_background"
        android:textStyle="bold"
=======
>>>>>>> main
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUsuario" />
    <ImageView
        android:id="@+id/imgUsuario"
        android:layout_width="163dp"
        android:layout_height="114dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
<<<<<<< HEAD
        app:srcCompat="@drawable/ic_profile_pic"/>
=======
        app:srcCompat="@drawable/imagenusuarioregistro"/>
    <ImageView
        android:id="@+id/imgGaleriaRegistrarse"
        android:layout_width="79dp"
        android:layout_height="64dp"
        android:layout_marginStart="45dp" android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/imgUsuario" app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagengaleriaregistro"/>
    <ImageView
        android:id="@+id/imgCamaraRegistrarse"
        android:layout_width="78dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toEndOf="@+id/imgUsuario"
        app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/imagencamararegistro"/>
>>>>>>> main

    <TextView
        android:id="@+id/registrarse_tv_nombreuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
<<<<<<< HEAD
        android:layout_marginTop="5dp"
        android:layout_marginEnd="140dp"
        android:text="@string/register_lbl_nombreUsu"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_primary"
        android:textStyle="bold"
=======
        android:layout_marginEnd="140dp"
        android:text="@string/register_lbl_nombreUsu"
        android:textAlignment="center"
>>>>>>> main
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrarse_et_contrasena" />

<<<<<<< HEAD
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRegGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/colorBTN_Dark"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/imgUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_galeria" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRegCamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/colorBTN_Dark"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgUsuario"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_camara" />

=======
>>>>>>> main
</androidx.constraintlayout.widget.ConstraintLayout>